addict property width 100vw in body, correct all align

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  width: 100vw;
 }
 header nav {
   height: 7.5vh;
